<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dozey</string>
    <string name="action_ringtone">Ringtone</string>
    <string name="action_facts">Nap Facts</string>
    <string name="choose_time">Choose a nap time</string>
    <string name="short_nap_duration">35 min</string>
    <string name="medium_nap_duration">65 min</string>
    <string name="long_nap_duration">95 min</string>
    <string name="custom_nap">Custom</string>
    <string name="start_nap">Start</string>
    <string name="title_activity_nap">NapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="short_nap_title">Small Doze</string>
    <string name="short_nap_facts">This nap is perfect if you need that quick pick me up. It\'s an ideal nap for a boost in alertness and energy. At this stage you are at a light stage of non-rapid eye movement sleep.</string>
    <string name="medium_nap_title">Medium Doze</string>
    <string name="medium_nap_facts">Need to remember facts, faces or names? This nap is ideal for improving your memory and taking before that big mid-term coming up. Warning, may cause temporary grogginess so allow some time to re-cooperate.</string>
    <string name="long_nap_title">Large Doze</string>
    <string name="long_nap_facts">This is for you serious dozers and is considered a full-cycle of sleep. It can lead to improved emotional and proceedural memory and creativity. This length of sleep typically avoids sleep inertia which makes it easier to wake up.</string>

</resources>
