<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/inner_padding"
            style="@style/AppTheme.ShortNap">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_nap_title"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    style="@style/AppTheme.HeadingLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_nap_duration"
                    android:id="@+id/textView2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    style="@style/AppTheme.HeadingMedium"/>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/short_nap_facts"
                android:id="@+id/textView3"
                style="@style/AppTheme.Paragraph" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/inner_padding"
            android:paddingBottom="@dimen/inner_padding"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            style="@style/AppTheme.MediumNap">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_nap_title"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    style="@style/AppTheme.HeadingLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_nap_duration"
                    android:id="@+id/textView2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    style="@style/AppTheme.HeadingMedium" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/medium_nap_facts"
                android:id="@+id/textView3"
                style="@style/AppTheme.Paragraph" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/inner_padding"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            style="@style/AppTheme.LongNap">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_nap_title"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    style="@style/AppTheme.HeadingLarge"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_nap_duration"
                    android:id="@+id/textView2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    style="@style/AppTheme.HeadingMedium"/>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/long_nap_facts"
                android:id="@+id/textView3"
                style="@style/AppTheme.Paragraph"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

